Fix demo app sidenav scrollbar

--- a/demo-app/src/app/app.component.scss
+++ b/demo-app/src/app/app.component.scss
@@ -4,6 +4,7 @@ header {
   #{'/deep/'} {
     .side-nav {
       padding-bottom: 0;
+      height: 100%;
     }
 
     .sidenav-background,
